--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,9 @@
   animation: l1 1s steps(4) infinite;
 }
 @keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
+
+.header{
+  -webkit-text-stroke: 2px;
+  -webkit-text-fill-color: transparent;
+}
 }
